--- a/components/HomeForm/Form.module.scss
+++ b/components/HomeForm/Form.module.scss
@@ -41,7 +41,7 @@
 
     }
 
-    .PasswordShowAline{
+    .PasswordShowAline {
       transform: translateY(-70%);
     }
 
@@ -49,6 +49,14 @@
       color: #dc3545;
     }
   }
+
+
+  .redF12 {
+    color: #dc3545;
+    font-size: 12px;
+    display: inline;
+  }
+
 }
 
 // Modal Form
