--- a/components/MyProfile/Components/GlobalDetails.module.scss
+++ b/components/MyProfile/Components/GlobalDetails.module.scss
@@ -18,6 +18,7 @@
             gap: 0.3rem;
             align-items: baseline;
             font-size: 20px;
+            align-items: center;
 
             svg {
                 font-size: 21px;
