--- a/components/MyProfile/Components/RightSectionMyProfile.module.scss
+++ b/components/MyProfile/Components/RightSectionMyProfile.module.scss
@@ -29,7 +29,7 @@
         .DetailsTypeLeft {
             display: flex;
             gap: 0.3rem;
-            align-items: baseline;
+            align-items: center;
             font-size: 20px;
 
             svg {
