--- a/components/BrowserLink/Browser.module.scss
+++ b/components/BrowserLink/Browser.module.scss
@@ -12,11 +12,9 @@
         color: #405765;
         cursor: pointer;
         padding: 0.5rem;
-        // padding: 0.5rem 1rem;
         font-size: 1rem;
         display: inline-block;
-        // border: 1px solid;
-        // border-radius: 20px;
+        border-radius: 5px;
     }
 }
 
