--- a/pages/Register/RegisterComponent/RightSection/RightSection.module.scss
+++ b/pages/Register/RegisterComponent/RightSection/RightSection.module.scss
@@ -1,5 +1,5 @@
 .right_section {
-  // padding-top: 8rem;
+  text-align: center;
   @media screen and (max-width: 768px) {
     padding-top: 4rem;
   }
