--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -51,11 +51,11 @@
         display: flex;
         flex-wrap: wrap;
         overflow-y: auto;
+        gap: 0.5rem;
 
         li {
           position: relative;
-          margin: 3px 5px 3px 0;
-          padding: 10px 20px 10px 5px;
+          padding: 10px 20px;
           border: 1px solid #d9d9d9;
           max-width: 100%;
           border-radius: 3px;
