--- a/pages/MyProfile/MyProfile.module.scss
+++ b/pages/MyProfile/MyProfile.module.scss
@@ -1,128 +1,112 @@
 @import "../../styles/constants.scss";
 
 .background_header {
-    background: url("../../public/Images/cover-image-register.jpg") no-repeat center center;
-    padding: 3rem 0 7rem 0;
-    background-size: cover;
-    color: gray;
-    text-align: center;
+  padding: 3rem 0 7rem 0;
+  background-size: cover;
+  color: gray;
+  text-align: center;
+  height: 398px;
+  p {
+    font-size: 23px;
+    margin: 7rem 0 2rem 0;
+    font-weight: 500;
+  }
 
-    p {
-        font-size: 23px;
-        margin: 7rem 0 2rem 0;
-        font-weight: 500;
-    }
-
-    .changeBackground {
-        background-color: rgba(0, 0, 0, 0.623);
-        width: auto;
-        float: right;
-        margin-right: 12rem;
-        padding: 0.5rem 1rem;
-        color: white;
-        display: flex;
-        align-items: baseline;
-        gap: 0.7rem;
-        font-size: 14px;
-        cursor: pointer;
-    }
+  .changeBackground {
+    background-color: rgba(0, 0, 0, 0.623);
+    width: auto;
+    float: right;
+    margin-right: 12rem;
+    padding: 0.5rem 1rem;
+    color: white;
+    display: flex;
+    align-items: baseline;
+    gap: 0.7rem;
+    font-size: 14px;
+    cursor: pointer;
+  }
 }
 
 .bg {
-    background: rgb(231, 230, 230);
+  background: rgb(231, 230, 230);
 }
-
-
 
 .detailsWrapper {
-    width: 75%;
-    margin-top: 4rem;
+  width: 75%;
+  margin-top: 4rem;
 
+  .datecont {
+    background-color: #d5d5d5;
+    padding: 17px 27px 17px 25px;
+    margin-right: 10px;
+
+    p {
+      color: #777;
+    }
+  }
+
+  hr {
+    color: inherit;
+    border: 0;
+    border-top: 1px solid;
+    opacity: 0.25;
+    margin: unset;
+    width: fit-content;
+  }
+
+  @media only screen and (max-width: 676px) {
     .datecont {
-        background-color: #d5d5d5;
-        padding: 17px 27px 17px 25px;
-        margin-right: 10px;
+      margin-right: 0;
+      padding: 17px 25px;
+      text-align: center;
 
-        p {
-            color: #777;
-        }
+      p {
+        margin-bottom: 0%;
+      }
     }
-
-    hr {
-        color: inherit;
-        border: 0;
-        border-top: 1px solid;
-        opacity: .25;
-        margin: unset;
-        width: fit-content;
-    }
-
-    @media only screen and (max-width: 676px) {
-        .datecont {
-            margin-right: 0;
-            padding: 17px 25px;
-            text-align: center;
-
-            p {
-                margin-bottom: 0%;
-            }
-        }
-    }
-
-
-
+  }
 }
-
-
-
-
 
 @media only screen and (max-width: 990px) and (min-width: 768px) {
-    .background_header {
-        p {
-            max-width: 75%;
-            margin: 7rem auto 2rem;
-        }
+  .background_header {
+    p {
+      max-width: 75%;
+      margin: 7rem auto 2rem;
     }
+  }
 }
 
-
-@media only screen and (max-width: 540px) and (min-width:423px) {
-    .detailsWrapper {
-        width: 100%;
-    }
+@media only screen and (max-width: 540px) and (min-width: 423px) {
+  .detailsWrapper {
+    width: 100%;
+  }
 }
-
-
-
 
 @media only screen and (max-width: 415px) {
-    .background_header {
-        .changeBackground {
-            margin: 0 5rem;
-            float: inherit;
-            justify-content: center;
-        }
+  .background_header {
+    .changeBackground {
+      margin: 0 5rem;
+      float: inherit;
+      justify-content: center;
     }
+  }
 
-    .detailsWrapper {
-        width: 100%;
-    }
+  .detailsWrapper {
+    width: 100%;
+  }
 }
 
-
-
 @media only screen and (max-width: 300px) {
-    .background_header {
-        .changeBackground {
-            margin: 0 1rem;
-            float: inherit;
-            justify-content: center;
-            padding: 0.5rem;
-        }
+  .background_header {
+    .changeBackground {
+      margin: 0 1rem;
+      float: inherit;
+      justify-content: center;
+      padding: 0.5rem;
     }
+  }
 
-    .detailsWrapper {
-        width: 100%;
-    }
+  .detailsWrapper {
+    width: 100%;
+  }
 }
