--- a/components/AvatarPicker/AvtarPicker.module.scss
+++ b/components/AvatarPicker/AvtarPicker.module.scss
@@ -2,10 +2,20 @@
   color: transparent;
 }
 
-.avtarWrapper{
-  padding: 2rem 4rem;
+.avtarWrapper {
+  padding: 1rem 0;
+  text-align: center;
+  img {
+    width: 50%;
+    border: 5px solid #d9475c;
+    border-radius: 100%;
+  }
 }
-
+@media only screen and (max-width: 768px) {
+  .img {
+    width: 100%!important;
+  }
+}
 @media only screen and (max-width: 1200px) {
   .Profile_input {
     padding: 1.5rem 0;
@@ -26,8 +36,5 @@
       margin: auto;
       margin-bottom: 1rem;
     }
-  }
-  .avtarWrapper{
-    padding: 2.5rem;
   }
 }
