--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -26,7 +26,7 @@
 }
 
 .Form_btnPrev {
-  align-self: end!important;
+  align-self: end !important;
 }
 @media only screen and (max-width: 950px) {
   .register_header_Links,
@@ -38,6 +38,12 @@
 @media only screen and (min-width: 768px) {
   .Form_btnPrev {
     display: none;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .Form_btn {
+    width: 100%!important;
   }
 }
 
