--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,10 @@
 @import "./constants.scss";
-@import url('https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Schibsted+Grotesk:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 html,
 body {
   margin: 0;
-  font-family: 'Schibsted Grotesk', sans-serif;
+  font-family: "Schibsted Grotesk", sans-serif;
   font-weight: 400;
 }
 
@@ -28,6 +27,11 @@ a {
 .dropdown-menu[data-bs-popper] {
   border-radius: 0;
   top: 98%;
+}
+.defaultThemeButton {
+  background-color: #d9475c!important;
+  border-color: #d9475c!important;
+  color: #fff!important;
 }
 .dropdown-menu {
   background-color: $transparent_maroon;
@@ -102,16 +106,16 @@ p {
   /* border-color: var(--bs-nav-tabs-link-active-border-color); */
   border-bottom: 2px solid #d9475c;
 }
-.nav-tabs .nav-link{
+.nav-tabs .nav-link {
   color: $lightGrey_txt;
 }
 // Global
 .b_right {
   border-right: 1px solid #bdbaba !important;
 }
-.toggle{
+.toggle {
   opacity: 1 !important;
 }
-.activeBorder{
+.activeBorder {
   border-bottom: 4px solid #34495e;
 }
