--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -85,7 +85,7 @@
 
     input {
       padding: 0;
-      height: 25px;
+      // height: 25px;
       outline: 0;
       border: 0 !important;
       background: transparent !important;
