update avtar dropdown , partnerprafrence dropdown close when select does not matter, create gallery redux , modify registrations header btn

--- a/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
+++ b/components/InputField/CountryStateSingle/CountryStateCityMultiple.module.scss
@@ -37,9 +37,10 @@
       width: 100%;
       cursor: text;
       text-align: initial;
+      border: none;
 
       p {
-        font-size: 17px !important;
+        font-size: 16px;
         font-weight: 400;
         margin: 0%;
         color: #000000;
