--- a/components/ImageGallery/ImageGallery.module.scss
+++ b/components/ImageGallery/ImageGallery.module.scss
@@ -18,10 +18,9 @@
 
   :last-child {
     display: flex;
-    align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     a {
 
@@ -30,6 +29,8 @@
       background-color: #eeeeee;
       img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
   }
