--- a/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
+++ b/pages/Register/RegisterComponent/RegisterHeader/RegisterHeader.module.scss
@@ -50,11 +50,14 @@
 }
 
 .show {
-  display: block;
   font-size: 0.9rem;
-  font-weight: 500;
   margin-right: 1.5rem;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  color: #fff;
 
   button{
     margin: 0.5rem auto !important;
