--- a/pages/Register/RegisterDetails.module.scss
+++ b/pages/Register/RegisterDetails.module.scss
@@ -21,7 +21,7 @@
     width: 33.3%;
     padding-bottom: 10px;
     color: #fff;
-    opacity: 0.5;
+    opacity: 0.7;
     cursor: pointer;
 
     @media only screen and (max-width: 768px) {
@@ -53,6 +53,12 @@
     @media only screen and (max-width: 768px) {
       display: block;
     }
+  }
+
+  .disabledheading{
+    color: #fff;
+    opacity: 0.3;
+    cursor: auto;
   }
 }
 
