validate profile details , dropdown value not select showing error , make dob require, validate forminput withvalidate and showing error on conditions , but showing some error while changneing the vlaue not reflect on formik and make next btn disable while all field empty

--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -73,6 +73,12 @@
   flex-direction: column;
   gap: 2rem;
 
+  .errorMessage{
+    font-size: 14px;
+    color: #f00;
+    margin-top: -5%;
+  }
+
   label {
     margin: 0.5rem 0 0 -11rem;
     position: absolute;
