--- a/components/InputField/SingleInputField/SingleInput.module.scss
+++ b/components/InputField/SingleInputField/SingleInput.module.scss
@@ -1,154 +1,159 @@
 @import "../../../styles/constants.scss";
 
 ///single input box css
-.singleBox {
-    display: flex;
-    position: relative;
-    width: 66%;
-
-    div {
-        width: 100%;
-
-        svg {
-            position: absolute;
-            right: 3px;
-            top: 20%;
-            cursor: pointer;
-        }
-    }
-
-    .inputBox {
-        border: 1px solid #d9d9d9;
-        border-radius: 2px;
-        padding: 0.875rem 1rem;
-        text-align: center;
-        margin: 0.6em;
-        color: #909090;
-        cursor: pointer;
-        width: 100%;
-        position: relative;
-        height: 8rem;
-        background: #fff;
-
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0 5px;
-            width: 100%;
-            max-height: 100px;
-            overflow-x: hidden;
-            cursor: text;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-
-            li {
-                position: relative;
-                margin: 3px 5px 3px 0;
-                padding: 10px 20px 10px 5px;
-                border: 1px solid #d9d9d9;
-                max-width: 100%;
-                border-radius: 3px;
-                background-color: #f5f5f5;
-                line-height: 13px;
-                cursor: default;
-                height: fit-content;
-            }
-        }
-
-        .ul_maxh_64{
-            max-height: 64px;
-        }
-
-        input {
-            border: 1px solid #d9d9d9 !important;
-            border-radius: 2px;
-            padding: 0.175rem 0.5rem !important;
-            text-align: center;
-            margin: 0.6em;
-            margin-top: 0 !important;
-        }
-    }
-
-    .blankInput {
-        border: none !important;
-        background: transparent !important;
-
-        input {
-            margin: 1px 0;
-            padding: 0;
-            height: 25px;
-            outline: 0;
-            border: 0 !important;
-            background: transparent !important;
-            box-shadow: none;
-            color: #999;
-            font-size: 100%;
-            font-family: sans-serif;
-            line-height: normal;
-            border-radius: 0;
-        }
-    }
-
-    .inputBoxVal {
-        visibility: hidden;
-        border: 1px solid #d9d9d9;
-        border-radius: 2px;
-        padding: 0.875rem 1rem;
-        text-align: center;
-        margin: 0.6em;
-        color: $browser_text;
-        cursor: pointer;
-        width: 100%;
-        position: absolute;
-        left: -9px;
-        border: 1px solid $red_bg;
-        background: $milkWhite_bg;
-        box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
-        z-index: 9;
-
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0 5px;
-            width: 100%;
-            max-height: 300px;
-            cursor: default;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 0.5rem;
-
-            li {
-                position: relative;
-                margin: 3px 5px 3px 0;
-                padding: 10px 20px 10px 5px;
-                border: 1px solid #d9d9d9;
-                max-width: 100%;
-                border-radius: 3px;
-                background-color: #f5f5f5;
-                line-height: 13px;
-                cursor: pointer;
-
-                &:hover {
-                    background-color: #d9475c;
-                    color: #fff
-                }
-            }
-
-            .tabActive {
-                background-color: #d9475c;
-                color: #fff
-            }
-        }
-    }
+.singleBoxReg {
+  width: 100%!important;
+  display: flex;
+  position: relative;
+  .inputBox {
+    margin: 0!important;
+  }
 }
+.singleBox {
+  display: flex;
+  position: relative;
+  width: 66%;
 
+  div {
+    width: 100%;
+
+    svg {
+      position: absolute;
+      right: 3px;
+      top: 20%;
+      cursor: pointer;
+    }
+  }
+
+  .inputBox {
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    padding: 0.875rem 1rem;
+    text-align: center;
+    margin: 0.6em;
+    color: #909090;
+    cursor: pointer;
+    width: 100%;
+    position: relative;
+    height: 8rem;
+    background: #fff;
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0 5px;
+      width: 100%;
+      max-height: 100px;
+      overflow-x: hidden;
+      cursor: text;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+
+      li {
+        position: relative;
+        margin: 3px 5px 3px 0;
+        padding: 10px 20px 10px 5px;
+        border: 1px solid #d9d9d9;
+        max-width: 100%;
+        border-radius: 3px;
+        background-color: #f5f5f5;
+        line-height: 13px;
+        cursor: default;
+        height: fit-content;
+      }
+    }
+
+    .ul_maxh_64 {
+      max-height: 64px;
+    }
+
+    input {
+      border: 1px solid #d9d9d9 !important;
+      border-radius: 2px;
+      padding: 0.175rem 0.5rem !important;
+      text-align: center;
+      margin: 0.6em;
+      margin-top: 0 !important;
+    }
+  }
+
+  .blankInput {
+    border: none !important;
+    background: transparent !important;
+
+    input {
+      margin: 1px 0;
+      padding: 0;
+      height: 25px;
+      outline: 0;
+      border: 0 !important;
+      background: transparent !important;
+      box-shadow: none;
+      color: #999;
+      font-size: 100%;
+      font-family: sans-serif;
+      line-height: normal;
+      border-radius: 0;
+    }
+  }
+
+  .inputBoxVal {
+    visibility: hidden;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+    padding: 0.875rem 1rem;
+    text-align: center;
+    margin: 0.6em;
+    color: $browser_text;
+    cursor: pointer;
+    width: 100%;
+    position: absolute;
+    left: -9px;
+    border: 1px solid $red_bg;
+    background: $milkWhite_bg;
+    box-shadow: 0 4px 5px rgb(0 0 0 / 15%);
+    z-index: 9;
+
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0 5px;
+      width: 100%;
+      max-height: 300px;
+      cursor: default;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.5rem;
+
+      li {
+        position: relative;
+        margin: 3px 5px 3px 0;
+        padding: 10px 20px 10px 5px;
+        border: 1px solid #d9d9d9;
+        max-width: 100%;
+        border-radius: 3px;
+        background-color: #f5f5f5;
+        line-height: 13px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #d9475c;
+          color: #fff;
+        }
+      }
+
+      .tabActive {
+        background-color: #d9475c;
+        color: #fff;
+      }
+    }
+  }
+}
 
 .active {
-    visibility: visible !important;
+  visibility: visible !important;
 }
-
-
 
 // @media only screen and (max-width: 1200px) and (min-width: 991px) {
 //     .singleBox {
@@ -160,17 +165,16 @@
 //     }
 // }
 
-
 @media only screen and (max-width: 1200px) and (min-width: 300px) {
-    .singleBox {
-        flex-direction: column;
-        width: 100%;
+  .singleBox {
+    flex-direction: column;
+    width: 100%;
 
-        .inputBox {
-            margin: 0.6rem 0;
-            min-width: auto;
-        }
+    .inputBox {
+      margin: 0.6rem 0;
+      min-width: auto;
     }
+  }
 }
 // @media only screen and (max-width: 767px) and (min-width: 300px) {
 //     .singleBox {
@@ -183,13 +187,13 @@
 //     }
 // }
 @media only screen and (max-width: 300px) {
-    .singleBox {
-        flex-direction: column;
-        width: 100%;
+  .singleBox {
+    flex-direction: column;
+    width: 100%;
 
-        .inputBox {
-            margin: 0.6rem 0;
-            min-width: auto;
-        }
+    .inputBox {
+      margin: 0.6rem 0;
+      min-width: auto;
     }
+  }
 }
