--- a/pages/LandingPage/LandingPage.module.scss
+++ b/pages/LandingPage/LandingPage.module.scss
@@ -163,9 +163,9 @@
       }
 
       @media screen and (max-width: 767px) {
-        * {
-          text-align: center;
-        }
+        // * {
+        //   text-align: center;
+        // }
 
         width: 100%;
 
