--- a/pages/DesiredProfile/DesiredProfile.module.scss
+++ b/pages/DesiredProfile/DesiredProfile.module.scss
@@ -186,6 +186,12 @@
         &:focus {
           outline: none;
         }
+
+        @media only screen and (max-width: 667px) {
+          max-width: 225px;
+          width: 70%;
+        }
+
       }
     }
   }
@@ -459,7 +465,7 @@
           width: fit-content;
           text-align: start;
           transform: translateY(0%);
-          max-width: 100px;
+          max-width: 110px;
         }
       }
     }
@@ -513,8 +519,8 @@
         }
 
         input {
-          padding: 0.875rem 0rem;
-          text-align: center;
+          width: 125px;
+          font-size: smaller;
         }
       }
     }
