dropdown item click issue fixed

--- a/components/LoginHeader/LoginHeader.module.scss
+++ b/components/LoginHeader/LoginHeader.module.scss
@@ -74,12 +74,11 @@
 .profileAvtarDrop {
   height: -webkit-fill-available;
   padding: 9px;
-
   a {
     padding: 0;
     margin-right: 0;
     text-transform: capitalize;
-
+    display: block !important;
     a {
       ::after {
         content: none;
