--- a/pages/DesiredProfile/DesiredProfile.module.scss
+++ b/pages/DesiredProfile/DesiredProfile.module.scss
@@ -193,6 +193,10 @@
         }
 
       }
+      .single_Input{
+        width: 100%;
+        max-width: none;
+      }
     }
   }
 }
@@ -483,6 +487,7 @@
   .singleBox {
     flex-direction: column;
     width: 100%;
+    padding: 0%;
 
     input {
       margin: 0% !important;
@@ -538,6 +543,7 @@
   .singleBox {
     flex-direction: column;
     width: 100%;
+    padding: 0%;
 
     input {
       margin: 0% !important;
