express yourself validations of max chracter

--- a/components/DropdownGrid/Dropdown.module.scss
+++ b/components/DropdownGrid/Dropdown.module.scss
@@ -314,6 +314,10 @@
           text-align: start;
           // padding: 1.5rem 1rem;
         }
+        .Single_select_Input{
+          width: 100%;
+          max-width: none;
+        }
       }
     }
   }
