--- a/pages/Register/RegisterComponent/Component.module.scss
+++ b/pages/Register/RegisterComponent/Component.module.scss
@@ -23,6 +23,42 @@
     color: #f00;
     font-size: 18px;
   }
+
+  .infoSection {
+    text-align: justify;
+    padding-left: 14%;
+    margin-bottom: 2rem;
+
+    .infoMain {
+      background-color: #c2c2bf2b;
+      width: 56%;
+      padding: 1rem;
+      border-radius: 10px;
+      color: #363636;
+
+      p {
+        font-size: 12px;
+        margin: 0%;
+      }
+
+      ul {
+        margin-bottom: 0;
+
+        li {
+          font-size: 12px;
+          list-style-type: circle;
+        }
+      }
+    }
+
+    @media only screen and (max-width: 768px) {
+      padding: 0 3%;
+
+      .infoMain {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .Form_btnPrev {
@@ -30,6 +66,7 @@
 }
 
 @media only screen and (max-width: 950px) {
+
   .register_header_Links,
   .register_header_Links a {
     width: 100%;
@@ -71,6 +108,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+
   .errorMessage {
     font-size: 14px;
     color: #f00;
@@ -240,7 +278,7 @@
 }
 
 .formEdit {
-  + button {
+  +button {
     margin-top: 3rem;
   }
 }
