--- a/pages/MyProfile/MyProfile.module.scss
+++ b/pages/MyProfile/MyProfile.module.scss
@@ -7,12 +7,15 @@
   text-align: center;
   height: 398px;
   width: 75%;
+  position: relative;
+  z-index: 10;
 
   p {
     font-size: 23px;
     margin: 0rem 0 2rem 0;
     font-weight: 500;
-    padding-top: 2rem;
+    padding: 2rem;
+    padding-bottom: 0;
   }
 
   .changeBackground {
