pass all the payload of step 1 in usehook of step1

--- a/components/MyProfile/MyProfileCard.module.scss
+++ b/components/MyProfile/MyProfileCard.module.scss
@@ -38,6 +38,7 @@
 
           span {
             color: #979090;
+            text-transform: capitalize;
           }
 
           .Package_type {
