--- a/components/Button/CustomButton.module.scss
+++ b/components/Button/CustomButton.module.scss
@@ -19,6 +19,25 @@
         transition: 0.5s ease-in-out;
     }
 }
+.ActioncustomButton {
+    padding: 0.45rem 1rem;
+    font-weight: $fw500;
+    outline: none;
+    border: 0;
+    border-radius: .25rem;
+    background-color: $red_bg;
+    color: $white_txt;
+    transition: 0.5s ease-in-out;
+    width: auto;
+    margin: 1rem;
+
+    &:hover {
+        color: $red_txt !important;
+        background-color: $milkWhite_bg;
+        outline: 3px solid $red_txt;
+        transition: 0.5s ease-in-out;
+    }
+}
 
 
 
